# hncli

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  ZSH_SETUP.md  config.py  demo.sh  hncli  hncli.ps1  hncli.py  pyproject.toml  requirements.txt  run-hncli.sh  setup.ps1  setup.sh
src/hncli/: cache.py  cli.py  config.py  errors.py  models.py  themes.py
tests/: test_browser_behavior.py  test_config_and_cache.py  test_console_theme.py  test_error_handling.py  test_search_limit.py
