[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hncli"
version = "0.1.0"
dependencies = [
    "requests==2.32.2",
    "rich==13.6.0",
    "typer==0.9.0",
    "pydantic==2.5.2"
]
requires-python = ">=3.8"
authors = [{name = "Your Name"}]

[project.scripts]
hn = "hncli.cli:app" 